# aws-big-data

./: .gitignore  README.md  pyproject.toml
src/batch-processing/: README.md
src/batch-processing/cluster/: words.py
src/batch-processing/disease/: processing.py
src/batch-processing/processing/: pizzza.py
src/batch-processing/reading/: necessary.py  optional_mysql_load.py  optional_mysql_read.py
src/batch-processing/series/: necessary.py
src/batch-processing/words/: job.py
src/batch_processing/disease/: job.py
src/batch_processing/pizza/: job.py
src/batch_processing/sql/: create_table_tv.sql  insert_tv.sql
src/batch_processing/tv/: necessary.py  optional_mysql_load.py  optional_mysql_read.py
src/batch_processing/words/: job.py
src/streaming/: README.md  consumer.py  producer.py
src/streaming/flights/: README.md
src/streaming/reddit/: README.md  consumer.py
